[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "padelpy"
version = "0.1.16"
authors = [
    { name="Travis Kessler", email="travis.j.kessler@gmail.com" },
]
description = "A Python wrapper for PaDEL-Descriptor software"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ecrl/padelpy"
"Bug Tracker" = "https://github.com/ecrl/padelpy/issues"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]