[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[project]
name = "padelpy"
version = "0.1.17"
authors = [
    { name="Travis Kessler", email="travis.j.kessler@gmail.com" },
]
description = "A Python wrapper for PaDEL-Descriptor software"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ecrl/padelpy"
"Bug Tracker" = "https://github.com/ecrl/padelpy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "pre-commit>=4",
    "build>=1.2",
]
docs = [
    "sphinx>=7",
    "furo>=2024.1",
    "sphinx-copybutton>=0.5",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: tests that invoke the bundled PaDEL engine via system Java",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["padelpy"]
branch = false

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true
